mo fixi oloribu overflow scroll

--- a/style.css
+++ b/style.css
@@ -284,6 +284,7 @@ footer {
   text-align: center;
   background: var(--primary-color);
   height: 5rem;
+  width: 100%;
 }
 
 footer p {
@@ -294,7 +295,8 @@ footer p {
 /* ipad mini (768) */
 
 @media screen and (max-width: 768px) {
-  body {
+  body,
+  html {
     overflow-x: hidden;
   }
 
@@ -314,6 +316,7 @@ footer p {
     clip-path: polygon(0 0, 100% 0, 100% 100%, 0 90%);
     transform: translateX(100%);
     transition: transform 0.5s ease-in;
+    overflow-x: hidden;
   }
 
   .nav-links ul {
